# MyTracker_bot

./: Dockerfile  Makefile  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
bots/: Dockerfile  pyproject.toml
bots/src/: config.py  main.py  middleware.py
bots/src/api/: client.py  exc.py  redis_client.py  response_handler.py  schemas.py  tz_client.py
bots/src/handlers/: start.py
bots/src/keyboards/: auth.py  settings.py  tasks.py
bots/src/states/: auth_states.py  settings_states.py  task_states.py
bots/src/tasks/: notify.py
src/: celery_app.py  config.py  container.py  err.py  main.py  middleware.py
src/api/: client.py
src/application/dto/: task.py
src/application/interfaces/: __init__.py  api_client.py  storage.py  task_repository.py  token_service.py
src/application/use_cases/: register.py  tasks.py
src/domain/entities/: __init__.py  task.py
src/handlers/: rollback.py
src/handlers/auth/: registration.py
src/handlers/settings/: cmd_settings.py
src/handlers/tasks/: create_tasks.py  delete_task.py  show_tasks.py  task_reminder.py  update_task.py
src/infra/: configs.py  err.py  jwt.py  redis_storage.py
src/infra/clients/: __init__.py  errors.py  (+3 more)
src/keyboards/: auth.py  tasks.py
src/tasks/: notify.py
task_service/: Dockerfile
task_service/src/: app.py  celery_app.py  config.py  database.py  dependencies.py  permissions.py
user_service/: Dockerfile
user_service/src/: app.py  config.py  database.py  dependencies.py  permissions.py  routing.py  schemas.py
worker/: Dockerfile  celery_app.py
(+169 files in other folders)
