[project]
name = "bots"
version = "0.1.0"
description = ""
authors = [
    {name = "TheAppleKingy",email = "pridanov.ali.job@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aiogram (>=3.21.0,<4.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "hupper (>=1.12.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "redis (>=6.2.0,<7.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "watchfiles (>=1.1.0,<2.0.0)",
    "aiogram3-calendar (>=0.1.2,<0.2.0)",
    "asgiref (>=3.9.1,<4.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "pycountries (>=1.2.1,<2.0.0)",
    "pycountry (>=24.6.1,<25.0.0)",
    "dishka (>=1.7.2,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
